--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="shortcut icon" href="images/logo.png" sizes="512x512" />
+<link rel="icon" type="image/png" href="images/logo.png" sizes="512x512" />
 	</head>
 	<body class="is-preload">
 
