--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>By me</li><li>I will be glad to give me your feedback &uparrow;</li>
+						<li>I will be glad to give me your feedback &uparrow;</li><li>By me</li>
 					</ul>
 				</div>
 			</footer>
