--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 		<link rel="shortcut icon" href="images/logo.png" sizes="512x512" />
 <link rel="icon" type="image/png" href="images/logo.png" sizes="512x512" />
 	</head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ES5KHP7SCD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ES5KHP7SCD');
+</script>
 	<body class="is-preload">
 
 		<!-- Sidebar -->
